--- a/package.json
+++ b/package.json
@@ -14,17 +14,25 @@
     "axios": "^0.27.2",
     "element-plus": "^2.2.11",
     "less": "^4.1.3",
+    "pinia": "^2.0.17",
+    "unplugin-vue-setup-extend-plus": "^0.3.2",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@iconify/json": "^2.1.84",
+    "@unocss/preset-attributify": "^0.45.1",
+    "@unocss/preset-icons": "^0.45.1",
+    "@unocss/preset-uno": "^0.45.1",
     "@vitejs/plugin-vue": "^3.0.0",
     "typescript": "^4.6.4",
+    "unocss": "^0.45.1",
     "unplugin-auto-import": "^0.10.2",
     "unplugin-icons": "^0.14.7",
     "unplugin-vue-components": "^0.21.2",
     "vite": "^3.0.0",
+    "vite-plugin-progress": "^0.0.3",
+    "vite-plugin-vue-images": "^0.6.1",
     "vite-plugin-vue-inspector": "^1.1.1",
     "vue-tsc": "^0.38.4"
   }
