--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.6",
     "@types/node": "^18.6.1",
+    "@wangeditor/editor": "^5.1.14",
+    "@wangeditor/editor-for-vue": "^5.1.12",
+    "@wangeditor/plugin-ctrl-enter": "^1.1.2",
+    "@wangeditor/plugin-md": "^1.0.0",
+    "@wangeditor/plugin-upload-attachment": "^1.0.0",
     "axios": "^0.27.2",
     "element-plus": "^2.2.11",
     "less": "^4.1.3",
