--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     // 如果您使用 Volar，请在 tsconfig.json 中通过 compilerOptions.type 指定全局组件类型。
     "types": ["element-plus/global"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "auto-imports.d.ts", "config/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "auto-imports.d.ts", "config/*.ts","custom-types.d.ts",],
   "references": [
     {
       "path": "./tsconfig.node.json"
