--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-plus": "^2.2.11",
     "less": "^4.1.3",
     "pinia": "^2.0.17",
+    "pinia-plugin-persistedstate": "^2.1.1",
     "unplugin-vue-setup-extend-plus": "^0.3.2",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
@@ -28,7 +29,7 @@
     "@iconify/json": "^2.1.84",
     "@unocss/preset-attributify": "^0.45.1",
     "@unocss/preset-icons": "^0.45.1",
-    "@unocss/preset-uno": "^0.45.1",
+    "@unocss/preset-wind": "^0.45.14",
     "@vitejs/plugin-vue": "^3.0.0",
     "typescript": "^4.6.4",
     "unocss": "^0.45.1",
