--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,18 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@v/*": ["src/view/*"],
-      "@c/*": ["src/components/*"],
-      "@h/*": ["./src/hooks/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@v/*": [
+        "src/view/*"
+      ],
+      "@c/*": [
+        "src/components/*"
+      ],
+      "@h/*": [
+        "./src/hooks/*"
+      ]
     },
     "target": "ESNext",
     "useDefineForClassFields": true,
@@ -18,13 +26,25 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     // 跳过所有.d.ts文件的类型检查
     "skipLibCheck": true,
     // 如果您使用 Volar，请在 tsconfig.json 中通过 compilerOptions.type 指定全局组件类型。
-    "types": ["element-plus/global"]
+    "types": [
+      "element-plus/global"
+    ]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "auto-imports.d.ts", "config/*.ts", "custom-types.d.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "auto-imports.d.ts",
+    "config/*.ts"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
