--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "axios": "^0.27.2",
     "element-plus": "^2.2.11",
     "less": "^4.1.3",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.17",
     "pinia-plugin-persistedstate": "^2.1.1",
+    "qs": "^6.11.0",
     "unplugin-vue-setup-extend-plus": "^0.3.2",
+    "vconsole": "^3.14.6",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@iconify/json": "^2.1.84",
+    "@types/nprogress": "^0.2.0",
     "@unocss/preset-attributify": "^0.45.1",
     "@unocss/preset-icons": "^0.45.1",
     "@unocss/preset-wind": "^0.45.14",
@@ -38,6 +42,7 @@
     "unplugin-vue-components": "^0.21.2",
     "vite": "^3.0.0",
     "vite-plugin-progress": "^0.0.3",
+    "vite-plugin-remove-console": "^1.1.0",
     "vite-plugin-vue-images": "^0.6.1",
     "vite-plugin-vue-inspector": "^1.1.1",
     "vue-tsc": "^0.38.4"
