--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,5 +5,9 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "config/*.ts", "uno.config.ts"]
+  "include": [
+    "vite.config.ts",
+    "config/*.ts",
+    "uno.config.ts"
+  ]
 }
