--- a/package.json
+++ b/package.json
@@ -1,50 +1,81 @@
 {
-  "name": "vite3.0.0_test",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@element-plus/icons-vue": "^2.0.6",
-    "@types/node": "^18.6.1",
-    "@wangeditor/editor": "^5.1.14",
-    "@wangeditor/editor-for-vue": "^5.1.12",
-    "@wangeditor/plugin-ctrl-enter": "^1.1.2",
-    "@wangeditor/plugin-md": "^1.0.0",
-    "@wangeditor/plugin-upload-attachment": "^1.0.0",
-    "axios": "^0.27.2",
-    "element-plus": "^2.2.11",
-    "less": "^4.1.3",
-    "nprogress": "^0.2.0",
-    "pinia": "^2.0.17",
-    "pinia-plugin-persistedstate": "^2.1.1",
-    "qs": "^6.11.0",
-    "unplugin-vue-setup-extend-plus": "^0.3.2",
-    "vconsole": "^3.14.6",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
-  },
-  "devDependencies": {
-    "@iconify/json": "^2.1.84",
-    "@types/nprogress": "^0.2.0",
-    "@unocss/preset-attributify": "^0.45.1",
-    "@unocss/preset-icons": "^0.45.1",
-    "@unocss/preset-wind": "^0.45.14",
-    "@vitejs/plugin-vue": "^3.0.0",
-    "typescript": "^4.6.4",
-    "unocss": "^0.45.1",
-    "unplugin-auto-import": "^0.10.2",
-    "unplugin-icons": "^0.14.7",
-    "unplugin-vue-components": "^0.21.2",
-    "vite": "^3.0.0",
-    "vite-plugin-progress": "^0.0.3",
-    "vite-plugin-remove-console": "^1.1.0",
-    "vite-plugin-vue-images": "^0.6.1",
-    "vite-plugin-vue-inspector": "^1.1.1",
-    "vue-tsc": "^0.38.4"
-  }
+	"name": "vite3.0.0_test",
+	"private": true,
+	"version": "0.0.0",
+	"type": "commonjs",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc --noEmit && vite build",
+		"preview": "vite preview",
+		"lint:style": "stylelint \"./**/*.{css,less,vue,html}\" --fix",
+		"prepare": "husky install"
+	},
+	"config": {
+		"commitizen": {
+			"path": "node_modules/cz-git"
+		}
+	},
+	"dependencies": {
+		"@element-plus/icons-vue": "^2.0.6",
+		"@types/node": "^18.6.1",
+		"@wangeditor/editor": "^5.1.14",
+		"@wangeditor/editor-for-vue": "^5.1.12",
+		"@wangeditor/plugin-ctrl-enter": "^1.1.2",
+		"@wangeditor/plugin-md": "^1.0.0",
+		"@wangeditor/plugin-upload-attachment": "^1.0.0",
+		"axios": "^0.27.2",
+		"element-plus": "^2.2.11",
+		"less": "^4.1.3",
+		"nprogress": "^0.2.0",
+		"pinia": "^2.0.17",
+		"pinia-plugin-persistedstate": "^2.1.1",
+		"prettier": "^2.7.1",
+		"qs": "^6.11.0",
+		"unplugin-vue-setup-extend-plus": "^0.3.2",
+		"vconsole": "^3.14.6",
+		"vue": "^3.2.37",
+		"vue-router": "^4.1.3"
+	},
+	"devDependencies": {
+		"@iconify/json": "^2.1.84",
+		"@types/nprogress": "^0.2.0",
+		"@typescript-eslint/eslint-plugin": "^5.40.1",
+		"@typescript-eslint/parser": "^5.40.1",
+		"@unocss/preset-attributify": "^0.45.1",
+		"@unocss/preset-icons": "^0.45.1",
+		"@unocss/preset-wind": "^0.45.14",
+		"@vitejs/plugin-vue": "^3.0.0",
+		"cz-git": "^1.3.11",
+		"eslint": "^8.25.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-vue": "^9.6.0",
+		"husky": "^8.0.1",
+		"postcss": "^8.4.18",
+		"postcss-html": "^1.5.0",
+		"postcss-less": "^6.0.0",
+		"stylelint": "^14.14.0",
+		"stylelint-config-html": "^1.1.0",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-config-recess-order": "^3.0.0",
+		"stylelint-config-recommended-less": "^1.0.4",
+		"stylelint-config-recommended-scss": "^7.0.0",
+		"stylelint-config-recommended-vue": "^1.4.0",
+		"stylelint-config-standard": "^29.0.0",
+		"stylelint-config-standard-scss": "^5.0.0",
+		"stylelint-config-standard-vue": "^1.0.0",
+		"stylelint-less": "^1.0.6",
+		"stylelint-order": "^5.0.0",
+		"typescript": "^4.6.4",
+		"unocss": "^0.45.1",
+		"unplugin-auto-import": "^0.10.2",
+		"unplugin-icons": "^0.14.7",
+		"unplugin-vue-components": "^0.21.2",
+		"vite": "^3.0.0",
+		"vite-plugin-progress": "^0.0.3",
+		"vite-plugin-remove-console": "^1.1.0",
+		"vite-plugin-vue-images": "^0.6.1",
+		"vite-plugin-vue-inspector": "^1.1.1",
+		"vue-tsc": "^0.38.4"
+	}
 }
