--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 		"vue-router": "^4.1.3"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^17.1.2",
+		"@commitlint/config-conventional": "^17.1.0",
 		"@iconify/json": "^2.1.84",
 		"@types/nprogress": "^0.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.40.1",
@@ -45,12 +47,14 @@
 		"@unocss/preset-icons": "^0.45.1",
 		"@unocss/preset-wind": "^0.45.14",
 		"@vitejs/plugin-vue": "^3.0.0",
+		"commitizen": "^4.2.5",
 		"cz-git": "^1.3.11",
 		"eslint": "^8.25.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-vue": "^9.6.0",
 		"husky": "^8.0.1",
+		"lint-staged": "^13.0.3",
 		"postcss": "^8.4.18",
 		"postcss-html": "^1.5.0",
 		"postcss-less": "^6.0.0",
