--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
 		"unplugin-vue-setup-extend-plus": "^0.3.2",
 		"vconsole": "^3.14.6",
 		"vue": "^3.2.37",
+		"vue-i18n": "9",
 		"vue-router": "^4.1.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
 		"@iconify/json": "^2.1.84",
+		"@intlify/vite-plugin-vue-i18n": "^6.0.3",
 		"@types/nprogress": "^0.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.40.1",
 		"@typescript-eslint/parser": "^5.40.1",
