--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"vconsole": "^3.14.6",
 		"vue": "^3.2.37",
 		"vue-i18n": "9",
-		"vue-router": "^4.1.3"
+		"vue-router": "^4.1.3",
+		"vuedraggable": "^4.1.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.1.2",
